Se agregó un cambio

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <h1 style="color:red">Práctica 01: Cosas que me gusta hacer.</h1>
     <P>1. Ver series de netflix.</P>
     <P>2. Ir al gimnasio.</P>
-    <P>3. Pasar tiempo con mis amigos y familiares</P>
+    <P>3. Pasar tiempo con familiares y amigos.</P>
     <P>4. Pintar.</P>
     <P>5. Escuchar música.</P>
+    <P>6. Comer boneless.</P>
 </body>
 </html>
